fix pop up menu text size and spacing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,10 +93,11 @@ nav {
     padding-bottom: 10px;
     border-style: solid;
     border-color: #fafafa;
-    font-size: 0.75em;
+    font-size: 1em;
     text-align: left;
     z-index: 98;
     display: none;
+    line-height: 40px;
 }
 
 /* style mouse over menu items in bold */
